logs/dag_id=udac_example_dag/run_id=scheduled__2019-01-12T04:00:00+00:00/task_id=Stage_songs/attempt=1.log
[2022-11-06T03:01:58.631+0200] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Stage_songs scheduled__2019-01-12T04:00:00+00:00 [queued]>
[2022-11-06T03:01:58.639+0200] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Stage_songs scheduled__2019-01-12T04:00:00+00:00 [queued]>
[2022-11-06T03:01:58.639+0200] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-06T03:01:58.639+0200] {taskinstance.py:1363} INFO - Starting attempt 1 of 4
[2022-11-06T03:01:58.640+0200] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-06T03:01:58.655+0200] {taskinstance.py:1383} INFO - Executing <Task(StageToRedshiftOperator): Stage_songs> on 2019-01-12 04:00:00+00:00
[2022-11-06T03:01:58.657+0200] {standard_task_runner.py:55} INFO - Started process 5765 to run task
[2022-11-06T03:01:58.663+0200] {standard_task_runner.py:82} INFO - Running: ['airflow', 'tasks', 'run', 'udac_example_dag', 'Stage_songs', 'scheduled__2019-01-12T04:00:00+00:00', '--job-id', '38', '--raw', '--subdir', 'DAGS_FOLDER/project/udac_example_dag.py', '--cfg-path', '/var/folders/sp/0_qfxj196m7gs6tyf69417g00000gn/T/tmp_lu3s1xo']
[2022-11-06T03:01:58.665+0200] {standard_task_runner.py:83} INFO - Job 38: Subtask Stage_songs
[2022-11-06T03:01:58.711+0200] {task_command.py:376} INFO - Running <TaskInstance: udac_example_dag.Stage_songs scheduled__2019-01-12T04:00:00+00:00 [running]> on host mahmouds-macbook-pro.local
[2022-11-06T03:01:58.757+0200] {taskinstance.py:1590} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=udacity
AIRFLOW_CTX_DAG_ID=udac_example_dag
AIRFLOW_CTX_TASK_ID=Stage_songs
AIRFLOW_CTX_EXECUTION_DATE=2019-01-12T04:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2019-01-12T04:00:00+00:00
[2022-11-06T03:01:58.761+0200] {base.py:71} INFO - Using connection ID 'aws_credentials' for task execution.
[2022-11-06T03:01:58.762+0200] {connection_wrapper.py:303} INFO - AWS Connection (conn_id='aws_credentials', conn_type='aws') credentials retrieved from login and password.
[2022-11-06T03:01:58.775+0200] {stage_redshift.py:78} INFO - Clearing data destination Redshift table
[2022-11-06T03:01:58.778+0200] {base.py:71} INFO - Using connection ID 'redshift' for task execution.
[2022-11-06T03:02:00.682+0200] {sql.py:315} INFO - Running statement: TRUNCATE TABLE staging_songs, parameters: None
[2022-11-06T03:02:01.623+0200] {stage_redshift.py:85} INFO - Copying data from s3 to Redshift
[2022-11-06T03:02:01.629+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'execution_date' from the template is deprecated and will be removed in a future version. Please use 'data_interval_start' or 'logical_date' instead.
[2022-11-06T03:02:01.631+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'next_ds' from the template is deprecated and will be removed in a future version. Please use '{{ data_interval_end | ds }}' instead.
[2022-11-06T03:02:01.632+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'next_ds_nodash' from the template is deprecated and will be removed in a future version. Please use '{{ data_interval_end | ds_nodash }}' instead.
[2022-11-06T03:02:01.633+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'next_execution_date' from the template is deprecated and will be removed in a future version. Please use 'data_interval_end' instead.
[2022-11-06T03:02:01.635+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'prev_ds' from the template is deprecated and will be removed in a future version.
[2022-11-06T03:02:01.637+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'prev_ds_nodash' from the template is deprecated and will be removed in a future version.
[2022-11-06T03:02:01.637+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'prev_execution_date' from the template is deprecated and will be removed in a future version.
[2022-11-06T03:02:01.638+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'prev_execution_date_success' from the template is deprecated and will be removed in a future version. Please use 'prev_data_interval_start_success' instead.
[2022-11-06T03:02:01.639+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'tomorrow_ds' from the template is deprecated and will be removed in a future version.
[2022-11-06T03:02:01.640+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'tomorrow_ds_nodash' from the template is deprecated and will be removed in a future version.
[2022-11-06T03:02:01.641+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'yesterday_ds' from the template is deprecated and will be removed in a future version.
[2022-11-06T03:02:01.641+0200] {logging_mixin.py:120} WARNING - /Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/utils/context.py:204 AirflowContextDeprecationWarning: Accessing 'yesterday_ds_nodash' from the template is deprecated and will be removed in a future version.
[2022-11-06T03:02:01.644+0200] {base.py:71} INFO - Using connection ID 'redshift' for task execution.
[2022-11-06T03:02:03.857+0200] {sql.py:315} INFO - Running statement: 
    COPY staging_songs
    FROM 's3://udacity-dend/song-data/A/A/A'
    ACCESSS_KEY_ID 'ASIAXUCJIPRIUU3ECWPH'
    SECRET_ACCESS_KEY '***'
    IGNOREHEADER 1
    DELIMITER ','
    , parameters: None
[2022-11-06T03:02:04.369+0200] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Users/mnagy99/airflow/plugins/operators/stage_redshift.py", line 96, in execute
    redshift_hook.run(formatted_sql)
  File "/Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/Users/mnagy99/opt/anaconda3/envs/airflow-env/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "ACCESSS_KEY_ID"
LINE 4:     ACCESSS_KEY_ID 'ASIAXUCJIPRIUU3ECWPH'
            ^

[2022-11-06T03:02:04.375+0200] {taskinstance.py:1401} INFO - Marking task as UP_FOR_RETRY. dag_id=udac_example_dag, task_id=Stage_songs, execution_date=20190112T040000, start_date=20221106T010158, end_date=20221106T010204
[2022-11-06T03:02:04.386+0200] {standard_task_runner.py:100} ERROR - Failed to execute job 38 for task Stage_songs (syntax error at or near "ACCESSS_KEY_ID"
LINE 4:     ACCESSS_KEY_ID 'ASIAXUCJIPRIUU3ECWPH'
            ^
; 5765)
[2022-11-06T03:02:04.396+0200] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-06T03:02:04.417+0200] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
